# llm-cluster

./: .gitignore  README.md  pyproject.toml  requirements.txt
llm_cluster/: __init__.py  cli.py  clustering.py  comparison.py  data.py  embedding_clustering.py  keys.py  metrics.py  models.py  ranking.py  weak_comparison_clustering.py
results/: clinc_anchor0_limit20.json  clinc_anchor0_limit500.json  clinc_anchor1158_full_vllm_qwen3-8b.json  clinc_anchor1648_full_vllm_qwen3-8b.json  clinc_anchor1863_full_vllm_qwen3-8b.json  clinc_anchor2432_full_vllm_qwen3-8b.json  clinc_anchor2765_full_vllm_qwen3-8b.json  clinc_anchor3347_full_vllm_qwen3-8b.json  clinc_anchor3779_full_vllm_qwen3-8b.json  clinc_anchor4285_full_vllm_qwen3-8b.json  clinc_anchor4489_full_vllm_qwen3-8b.json  clinc_anchor611_full_vllm_qwen3-8b.json  clinc_cluster_k150_full_exactk_vllm_qwen3-8b.json  clinc_embedding_cluster_k150_full_instructor-large.json  clinc_embedding_cluster_k1929_full_instructor-large.json  clinc_weak_comparison_alg_g_k150_full_exactk_posthoc_instructor-large.json  clinc_weak_comparison_alg_g_k150_full_instructor-large.json  cluster_metrics_analysis.md  dbpedia_weak_comparison_alg_g_k14_limit1000_exactk_sort_instructor-large.json
scripts/: run_dbpedia_embedding_clustering.sh  run_dbpedia_weak_comparison_clustering.sh  run_instructor_embedding_clustering.sh  run_instructor_embedding_clustering_k1929.sh  run_vllm_qwen3_8b_clustering.sh  run_vllm_qwen3_8b_random_anchors.sh  run_vllm_qwen3_8b_weak_comparison_clustering.sh  run_vllm_qwen3_8b_weak_comparison_pick_mins.sh
